# aidem

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  LICENSE.md  NOTICE.md  README.md  RELEASE.md  SECURITY.md  aidem_cli.py  aidem_paths.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: dco.yml  release.yml  test.yml
config/: __init__.py
config/generators/: __init__.py  base.py  claude.py  cursor.py  kilo.py  opencode.py  windsurf.py
config/runtimes/: __init__.py  base.py  binary.py  docker.py  uv_venv.py
src/aidem/: __init__.py  cli.py  paths.py
src/aidem/config/: AGENTS.md
src/aidem/config/generators/: __init__.py  base.py  cursor.py  github.py  kilo.py  windsurf.py
src/aidem/config/overlays/python-cli/: AGENTS.md
src/aidem/config/overlays/web-app/: AGENTS.md
src/aidem/config/runtimes/: __init__.py
tests/: conftest.py  test_init.py  test_paths.py  test_registry.py  test_rules.py  test_runtimes.py  test_skills.py
