[project]
name = "aidem"
version = "0.1.0"
description = "Universal AI development environment manager"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aidem = "aidem_cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["aidem_cli.py", "aidem_paths.py", "config"]
