[project]
name = "aidem"
version = "0.1.0"
description = "Universal AI development environment manager"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.11"
authors = [
    { name = "Bhavesh J" },
]
keywords = [
    "ai",
    "cli",
    "agent",
    "development-environment",
    "skills",
    "rules",
    "mcp",
    "agents-md",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/bhave-sh/aidem"
Repository = "https://github.com/bhave-sh/aidem"
Issues = "https://github.com/bhave-sh/aidem/issues"
Changelog = "https://github.com/bhave-sh/aidem/releases"

[project.optional-dependencies]
dev = ["pytest>=8.0", "twine>=5.0"]

[project.scripts]
aidem = "aidem.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidem"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aidem",
    "tests",
    "README.md",
    "LICENSE.md",
    "pyproject.toml",
]